--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -130,14 +130,25 @@
           <!--          <input pInputText formControlName="owner">-->
         </div>
       </div>
-      <div class="col-6">
-        <div class="field">
-          <label><span class="text-red-600">*</span>帳戶</label>
-          <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)" formControlName="account_name" [filter]="true"
-                      filterBy="label" [showClear]="true" placeholder="選擇現有帳戶">
-          </p-dropdown>
+      <ng-container *ngIf="dialogHeader === '編輯線索'">
+        <div class="col-6">
+          <div class="field">
+            <label><span class="text-red-600">*</span>帳戶</label>
+            <p-dropdown [options]="GetAllAccount" formControlName="account_name"></p-dropdown>
+          </div>
         </div>
-      </div>
+      </ng-container>
+      <ng-container *ngIf="dialogHeader !== '編輯線索'">
+        <div class="col-6">
+          <div class="field">
+            <label><span class="text-red-600">*</span>帳戶</label>
+            <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)" formControlName="account_name"
+                        [filter]="true" optionLabel="label" appendTo="body"
+                        filterBy="label" [showClear]="true" placeholder="選擇現有帳戶">
+            </p-dropdown>
+          </div>
+        </div>
+      </ng-container>
       <ng-container *ngIf="dialogHeader !== '編輯線索'">
         <div class="col-6 flex justify-content-start mt-4">
           <p-button (click)="type.toggle($event)" icon="pi pi-plus" pTooltip="新增帳戶" tooltipPosition="top"
@@ -239,7 +250,9 @@
       <div class="col-6">
         <div class="field">
           <label>父系帳戶</label>
-          <p-dropdown placeholder="請選擇" appendTo="body" [filter]="true" filterBy="name"></p-dropdown>
+          <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)" [filter]="true"
+                      filterBy="label" [showClear]="true" placeholder="選擇現有帳戶" optionLabel="label"
+                      formControlName="parent_account_id"></p-dropdown>
         </div>
       </div>
       <div class="col-6">
@@ -270,7 +283,8 @@
       </div>
     </div>
     <div class="flex justify-content-end">
-      <p-button label="新增" styleClass="p-button-outlined p-button-info"></p-button>
+      <p-button label="新增" (click)="add_Acount()"
+                styleClass="p-button-outlined p-button-info"></p-button>
       <p-button label="取消" (click)="addAcount=false;edit=true" styleClass="p-button-secondary ml-1"></p-button>
     </div>
   </p-dialog>
