--- a/src/app/views/features/account/account.component.html
+++ b/src/app/views/features/account/account.component.html
@@ -46,7 +46,7 @@
             <!--            <td>{{ account.type }}</td>-->
             <td>
               <ng-container *ngFor="let value of account.type">
-                <p-tag size="large" [icon]="getSeverity(value.toString().split(',')).icon" [severity]="getSeverity(value.toString().split(',')).severity" class="mr-2" [value]="value.toString().split(',')"></p-tag>
+                <p-tag [icon]="getSeverity(value.toString().split(',')).icon" [severity]="getSeverity(value.toString().split(',')).severity" class="mr-2" [value]="value.toString().split(',')"></p-tag>
               </ng-container>
             </td>
             <td>{{ account.created_by }}</td>
@@ -142,14 +142,14 @@
       </div>
     </ng-container>
     <div class="flex justify-content-end">
+      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
       <ng-container *ngIf="dialogHeader === '編輯帳戶'">
         <p-button label="儲存" (click)="patchAccount();edit=false"
-                  styleClass="p-button-outlined p-button-info"></p-button>
+                  styleClass="p-button-info"></p-button>
       </ng-container>
       <ng-container *ngIf="dialogHeader !== '編輯帳戶'">
-        <p-button label="新增" (click)="postAccount()" styleClass="p-button-outlined p-button-info"></p-button>
+        <p-button label="新增" (click)="postAccount()" styleClass="p-button-info"></p-button>
       </ng-container>
-      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
     </div>
   </p-dialog>
 </form>
