--- a/src/app/views/features/account/view-account/view-account.component.html
+++ b/src/app/views/features/account/view-account/view-account.component.html
@@ -105,9 +105,9 @@
                 </div>
               </div>
               <div class="flex justify-content-end">
+                <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
                 <p-button label="儲存" (click)="patchAccount();"
-                          styleClass="p-button-outlined p-button-info"></p-button>
-                <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
+                          styleClass="p-button-info"></p-button>
               </div>
             </form>
           </p-tabPanel>
