--- a/src/app/views/features/contact/contact.component.html
+++ b/src/app/views/features/contact/contact.component.html
@@ -156,15 +156,15 @@
       <div class="col-12 md:col-6 lg:col-6"></div>
       <div class="col-12 md:col-6 lg:col-6 mt-3">
         <div class="flex justify-content-end mt-3">
+          <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
           <ng-container *ngIf="dialogHeader === '編輯聯絡人'">
             <p-button label="儲存" (click)="patchContact();edit=false"
-                      styleClass="p-button-outlined p-button-info"></p-button>
+                      styleClass="p-button-info"></p-button>
           </ng-container>
           <ng-container *ngIf="dialogHeader !== '編輯聯絡人'">
             <p-button label="新增" (click)="postContact();edit=false"
-                      styleClass="p-button-outlined p-button-info"></p-button>
+                      styleClass="p-button-info"></p-button>
           </ng-container>
-          <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
         </div>
       </div>
     </div>
