--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -189,13 +189,13 @@
       </div>
     </ng-container>
     <div class="flex justify-content-end mt-3">
+      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
       <ng-container *ngIf="dialogHeader === '編輯線索'">
-        <p-button label="儲存" (click)="patchLead();edit=false" styleClass="p-button-outlined p-button-info"></p-button>
+        <p-button label="儲存" (click)="patchLead();edit=false" styleClass="p-button-info"></p-button>
       </ng-container>
       <ng-container *ngIf="dialogHeader !== '編輯線索'">
-        <p-button label="新增" (click)="postLead();edit=false" styleClass="p-button-outlined p-button-info"></p-button>
+        <p-button label="新增" (click)="postLead();edit=false" styleClass="p-button-info"></p-button>
       </ng-container>
-      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
     </div>
   </p-dialog>
   <!--帳戶類別 menu-->
@@ -259,9 +259,9 @@
       </div>
     </div>
     <div class="flex justify-content-end">
+      <p-button label="取消" (click)="addAccshowAlertCancel()" styleClass="p-button-secondary mr-1"></p-button>
       <p-button label="新增" (click)="add_Acount()"
-                styleClass="p-button-outlined p-button-info"></p-button>
-      <p-button label="取消" (click)="addAccshowAlertCancel()" styleClass="p-button-secondary ml-1"></p-button>
+                styleClass="p-button-info"></p-button>
     </div>
   </p-dialog>
 </form>
