--- a/src/app/views/features/lead/view-lead/view-lead.component.html
+++ b/src/app/views/features/lead/view-lead/view-lead.component.html
@@ -165,9 +165,9 @@
                 </div>
               </div>
               <div class="flex justify-content-end mt-3">
+                <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
                 <p-button label="儲存" (click)="patchLead()"
-                          styleClass="p-button-outlined p-button-info"></p-button>
-                <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
+                          styleClass="p-button-info"></p-button>
               </div>
               <!--              </ng-container>-->
             </p-tabPanel>
@@ -246,9 +246,9 @@
       </div>
     </div>
     <div class="flex justify-content-end">
+      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
       <p-button label="轉換" (click)="postOpportunity();edit=false"
-                styleClass="p-button-outlined p-button-info"></p-button>
-      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
+                styleClass="p-button-info"></p-button>
     </div>
   </p-dialog>
 </form>
