--- a/src/app/views/features/opportunity/opportunity.component.html
+++ b/src/app/views/features/opportunity/opportunity.component.html
@@ -161,15 +161,15 @@
       </div>
     </ng-container>
     <div class="flex justify-content-end">
+      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
       <ng-container *ngIf="dialogHeader === '編輯商機'">
         <p-button label="儲存" (click)="patchOpportunity();edit=false"
-                  styleClass="p-button-outlined p-button-info"></p-button>
+                  styleClass="p-button-info"></p-button>
       </ng-container>
       <ng-container *ngIf="dialogHeader !== '編輯商機'">
         <p-button label="新增" (click)="postOpportunity();edit=false"
-                  styleClass="p-button-outlined p-button-info"></p-button>
+                  styleClass="p-button-info"></p-button>
       </ng-container>
-      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
     </div>
   </p-dialog>
 </form>
