--- a/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.html
+++ b/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.html
@@ -96,7 +96,8 @@
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label><span class="text-red-600">*</span>帳戶</label>
-                    <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)" formControlName="account_name"
+                    <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)"
+                                formControlName="account_name"
                                 [filter]="true" appendTo="body" optionLabel="label"
                                 filterBy="label" [showClear]="true" placeholder="選擇現有帳戶"
                                 [ngClass]="{'ng-dirty':opportunity_form.controls['account_name'].hasError('required') && opportunity_form.controls['account_name'].touched}">
@@ -158,9 +159,9 @@
                 </div>
               </div>
               <div class="flex justify-content-end mt-3">
+                <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
                 <p-button label="儲存" (click)="patchOpportunity(id)"
-                          styleClass="p-button-outlined p-button-info"></p-button>
-                <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
+                          styleClass="p-button-info"></p-button>
               </div>
             </p-tabPanel>
             <p-tabPanel header="活動">
